<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#CCCCCC"
        >
        
        <Button 
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_back"
            />
        
        <TextView 
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/view_manage_city"
            />        
        
        <Button 
            android:id="@+id/add_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_add"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        
        <ListView 
            android:id="@+id/location_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            
        </ListView>
                
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
                
        <Button 
            android:id="@+id/change_delete_county_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            />
        
    </LinearLayout>

</LinearLayout>
