<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#CCCCCC"
        >
        
        <Button 
            android:id="@+id/refresh_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_refresh"
            />
        
        <TextView 
            android:id="@+id/location_name_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="24sp"
            />
        
        <Button 
            android:id="@+id/manage_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/button_manage_city"
            />
        
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#96D7ED"
        >
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:orientation="vertical"
            >
            
            <TextView 
	            android:id="@+id/today_real_time_temperature_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="60sp"
	            />
            
            <TextView 
	            android:id="@+id/today_temperature_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="18sp"
	            />
            
            <TextView 
	            android:id="@+id/today_weather_info_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            />
            
            <TextView 
	            android:id="@+id/today_weather_date_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            />
            
            <TextView 
	            android:id="@+id/today_week_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            />
            
        </LinearLayout>        
                
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:paddingTop="15dp"
            android:paddingRight="10dp"
            android:orientation="vertical"
            >
            
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="12sp"
	            android:text="@string/view_data_source"
	            />
            
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="12sp"
	            android:text="@string/view_update_time"
	            />
            
            <TextView 
                android:id="@+id/weather_day_info_update_time_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="12sp"
	            />
            
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            android:text="@string/view_today_string"
	            />
            
            <TextView 
                android:id="@+id/current_date_view"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="14sp"
	            />
            
        </LinearLayout>
        
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentLeft="true"  	
		    android:paddingBottom="20dp"
            android:orientation="vertical"
            >
	    
		    <GridView
			    android:id="@+id/weather_day_info_grid_view"  
			    android:layout_width="match_parent"   
			    android:layout_height="match_parent"
			    android:numColumns="auto_fit"  
			    android:verticalSpacing="10dp"  
			    android:horizontalSpacing="10dp"  
			    android:columnWidth="60dp"  
			    android:stretchMode="columnWidth" 
			/>
		    
		</LinearLayout>
        
    </RelativeLayout>

</LinearLayout>
